# vnp_tts

./: comparison_results.csv  toy.py
FastNeuTTS/: README.md  app.py  pyproject.toml  test.py  utils.py
FastNeuTTS/NeuTTS/: codec.py  engine.py
FastNeuTTS/client/: call_tts_ws.py
data_prep/text_verbalization/app/: README.md  client.py  (+1 more)
data_synthesis/text_analyzing/: abbreviation.txt  alphanumeric.txt  date.txt  draft.py  explore_text.ipynb  foreignwords.txt  money.txt  notes  numbers.txt  plan.txt  punctuations.txt  special_symbols.txt  test_text_analyzing.py  text_analyze.txt  text_analyzing.py  units.txt
data_synthesis/text_collection/: collect_vietnampos_vn.py  end_marker.txt  firecrawl_sample.md  metadata.txt  notes.txt  plan.txt
data_synthesis/utils/: generate_text_ids.py
ft_neutts/: .gitignore  finetune.py  generate.py  prepare_audio_codes.py  prepare_data.py  requirements.txt
ft_neutts/configs/: generate.yaml
ft_neutts/md/: finetune.py  ft_on_md.txt
ft_neutts/scripts/: generate.sh
make_tts_api/: detect_audio.py  export_audio.py  ffplay.txt  ffprobe-formats.txt  ffprobe-values.txt  get_audio_metadata.py  verify_audio_settings.py
misc/: check_sample_rate.py
notebooks/md/: finetune-neu-tts.ipynb  open_browser_selenium.ipynb  phoaudiobook-prepare-audio-codes.ipynb  phoaudiobook.ipynb  tts-explore-models-neutts-inference.ipynb
tests/: test_export_audio_bytes.py
toy_output/: 25_male_north_middle_adv_tvc_nhat_nam_8s_converted.pcm
websockets_handson/: .env  client.py  llms.py  notes.txt  server.py  server1.py  tts_text_chunker.py  tts_utils.py
(+242 files in other folders)
