[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FastNeuTTS"
version = "0.0.2"
authors = [
  { name="Yatharth Sharma", email="yatharthsharma3501@gmail.com" },
]
description = "Fast batched audio generation with neutts-air"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lmdeploy",
    "librosa",
#    "fastaudiosr @ git+https://github.com/ysharma3501/FlashSR.git",
    "neucodec",
    "phonemizer"
    
]

[project.urls]
Homepage = "https://github.com/ysharma3501/FastNeuTTS"
Issues = "https://github.com/ysharma3501/FastNeuTTS/issues"
